# computingMicrobiome

./: .gitignore  404.html  README.md  adder_instructions.txt  compound_opcode_test.py  elementaryCA.py  index.html  k_bit_memory_bm.py  k_bit_memory_classifier.py  k_bit_memory_test.py  k_compound_opcode_bm.py  k_compound_opcode_classifier.py  k_opcode_logic16_bm.py  k_opcode_logic16_classifier.py  k_opcode_logic_bm.py  k_opcode_logic_classifier.py  k_serial_adder_bm.py  k_serial_adder_classifier.py  k_xor_classifier.py  make_toy_addition_figures.py  mkdocs.yml  objects.inv  opcode16_test.py  opcode_test.py  plot_utils.py  pyproject.toml  readout_comparison.csv  readout_comparison.json  run_toy_addition_experiment.py  serial_adder_test.py  test_k_xor_visual.py  test_rule110_gif.py  toy_addition_experiment.py
.github/workflows/: docs.yml
api/: index.html
artifacts/: meta_evo_frozen_readout.json  rule90_rule110_sanity.json
artifacts/crm_only_to_perfect_smoke/: crm_only_to_perfect_summary.json
cli/: index.html
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: api.md  cli.md  index.md
example_tasks/: task_1_learn_8_bit_with_rule_110.py  task_2_learn_8_bit_with_rule_90.py  task_3_learn_8_bit_with_crm.py  task_4_learn_8_bit_with_ibm.py  task_4_learn_8_bit_with_ibm_pulse.py  task_4_learn_8_bit_with_ibm_pulse_matched.py  task_4_pulse_256_occupancy_pdf.py  task_5_learn_logic16_rule_110.py  task_6_learn_logic16_rule_90.py  task_7_learn_logic16_ibm.py  task_7_learn_logic16_with_ibm.py
examples/: meta_evo_freeze_reload.py
experiments/: __init__.py  compare_readouts.py  crm_only_to_perfect.py  crm_population_kinetics.py  crm_random_evolution_plots.py  crm_task_benchmark.py  rule90_rule110_sanity.py  run_microbiome_host_evolution.py  run_toy_addition_experiment.py  toy_addition_experiment.py
notebooks/: ibm_simulation_demo.ipynb  task_4_8bit_ibm_debug_viewer.ipynb  task_7_logic16_ibm_debug_viewer.ipynb  task_7_logic16_ibm_injection_timing.ipynb
search/: search_index.json
src/computingMicrobiome/: __init__.py  cli.py  eca.py  utils.py  (+2 more)
sweep_outputs/: sweep_curves.jsonl  sweep_results.jsonl  sweep_summary.json
tests/: test_digital_readout.py  test_evolution_api.py  test_evolution_engine_invariants.py  test_evolutionary_readout.py  test_ibm_backend.py  test_k_bit_memory_classifier.py  test_k_xor_classifier.py  test_memory_adapters.py  test_meta_evolutionary_readout.py  test_moran_readout.py  test_perceptron_learner.py
(+76 files in other folders)
